Corretti errori per utilizzo su tomcat10